[metadata]
name = nfinance
version = attr: nfinance.__version__
author = Yoonbae Cho
author_email = yquant@xcv.kr
url = https://github.com/yoonbae81/nfinance
license_file = LICENSE
description = Download market data from NAVER
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >= 3.10
packages = find:
package_dir =
    =src
install_requires =
    beautifulsoup4 >= 4.10.0
    requests >= 2.26.0
    pandas >= 1.4.0
    setuptools >= 46.4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nfinance = nfinance.cli:main

[tool:pytest]
testpaths = tests